them news,sua index

--- a/news.html
+++ b/news.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <h2>Day la sua doi lan 1</h2>
-    <h3>Da sua doi lan 2</h3>
+    <h1>Day la news</h1>
   </body>
 </html>
