--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <h2>Day la sua doi lan 1</h2>
-    <h3>Da sua doi lan 2</h3>
-    <h4>lan 3 do</h4>
+    <h1>Cong viec 2</h1>
   </body>
 </html>
